--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     <tr>
         <td colspan="5">
             <p>
-                    <font color="#150000" face="Garamond" size="5                     <dd> Hallo, saya</dd>
+                    <font color="#150000" face="Garamond" size="5">                     
+                        <dd> Hallo, saya</dd>
                         </h3>
                         <h2><font color="#150000" face="Georgia">
                             <dd><i>Cahya Meika Nafi' ah </i></font>
@@ -118,5 +119,6 @@
     </table>
 
 </body>
+
 
 </html>
