--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     <tr>
         <td colspan="5">
             <p>
-                    <font color="#150000" face="Garamond" size="5">                     
+                    <font color="#150000" face="Garamond" size="5">
                         <dd> Hallo, saya</dd>
                         </h3>
                         <h2><font color="#150000" face="Georgia">
-                            <dd><i>Cahya Meika Nafi' ah </i></font>
+                            <dd><i>Cahya Meika Nafi' ah </i>
                             </dd>
                         </h2>
                         <DD>
@@ -122,3 +122,4 @@
 
 
 </html>
+
